--- a/assets/sass/public/icons/_icons.scss
+++ b/assets/sass/public/icons/_icons.scss
@@ -272,6 +272,21 @@
 
 // icons list
 
+.icon-code:before {
+	content: "\e9ac";
+}
+.icon-check:before {
+	content: "\e98b";
+}
+.icon-shopping-cart:before {
+	content: "\e72f";
+}
+.icon-shapes:before {
+	content: "\eb5a";
+}
+.icon-video:before {
+	content: "\ec13";
+}
 .icon-code1:before {
 	content: "\e7bf";
 }
