--- a/templates/_sections/home/flip-cards.html.twig
+++ b/templates/_sections/home/flip-cards.html.twig
@@ -7,7 +7,7 @@
                 section: section,
                 title: title,
                 columns: columns,
-                content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur blanditiis saepe dolore tempora nihil praesentium dolorum unde, earum, nostrum odit?',
+                content: content,
                 parallax: parallax is defined ? parallax : null,
                 removeVerticalMargins: removeVerticalMargins,
             } %}
