--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
     {% set headerMenu = [
         {label: 'Home', url: path('home')},
         {label: 'Portfolio', url: path('projects')},
-        {label: 'Lessons', url: path('lessons')},
+        {label: 'Lessons', url: "http://phpstack-749317-2528704.cloudwaysapps.com", target: '_blank'},
         {label: 'Blog', url: path('posts')},
         {label: 'About', url: path('about')},
         {label: 'Contact', url: path('contact')}
