--- a/assets/sass/public/_header.scss
+++ b/assets/sass/public/_header.scss
@@ -57,13 +57,13 @@
 				z-index: 299;
 			}
 		}
-	#header + #wrapper .include-header,
-	#header + .include-header {
-		margin-top: -$header-height - 2px;
-		display: inline-block;
-		vertical-align: bottom;
-		width: 100%;
-	}
+		+ #wrapper .include-header,
+		+ .include-header {
+			margin-top: -$header-height - 2px;
+			display: inline-block;
+			vertical-align: bottom;
+			width: 100%;
+		}
 	}
 }
 
