about content update

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -66,11 +66,12 @@
 
                         {% include "_elements/section-title.html.twig" with {
                             section: null,
-                            title: "Send me an <span>email</span>",
+                            title: "Send me <span>a message</span>",
                             offsetLeft: false,
-                            content: null
+                            content: null,
+                            columns: 12,
                         } %}
-                        
+
                         {% include "_elements/alert.html.twig" %}
                         <div class="form-widget">
 
