--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -67,7 +67,7 @@
                         contentBack: 'Let\'s talk about your projet in order to establish the architecture of the application.',
                         imgBack: asset('build/images/home/flip/web-developement.jpg'),
                         btnLabel: 'See references',
-                        btnLink: path('project_category',{slug: 'web-developement'})
+                        btnLink: path('project_category',{slug: 'programming'})
                     },{
                         icon: 'icon-shopping-cart',
                         title: 'Marketing & Ecommerce expertise',
