added accoridon to lessons

--- a/assets/sass/lesson.scss
+++ b/assets/sass/lesson.scss
@@ -3,6 +3,7 @@
 @import './public/pagetitle'; // optimized m
 @import './public/content';
 @import './public/elements/dividers'; // optimized m
+@import './public/elements/accordion';
 
 // 'comments' section
 @import './public/elements/comments'; // optimized (created)
