added lightbox to lessons & posts

--- a/assets/sass/lesson.scss
+++ b/assets/sass/lesson.scss
@@ -4,6 +4,7 @@
 @import './public/content';
 @import './public/elements/dividers'; // optimized m
 @import './public/elements/accordion';
+@import './public/magnific-popup';
 
 // 'comments' section
 @import './public/elements/comments'; // optimized (created)
