--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,7 +22,7 @@
 			section: "Hello,",
 			title: {
 				before: "I am a ", 
-				words:"full-stack|PHP|javascript|web",
+				words:"full-stack|PHP|javascript|Symfony",
 				after: "<br>developer" 
 			},
 			headline: "I don't just build web apps. I build web apps that SELL.",
@@ -143,7 +143,7 @@
                             delay: 200
                         },{
                             icon: 'icon-line2-layers',
-                            title: 'Frameworks and bundles',
+                            title: 'Frameworks & libraries',
 							content: stats.technologies.list,
                             to: stats.technologies.count,
                             interval: 25,
