--- a/templates/_layout/collection.html.twig
+++ b/templates/_layout/collection.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {# Prepare #}
-    {% set hasFeaturedSection = featuredProjects is defined 
+    {% set hasFeaturedSection = 
+        (featuredProjects is defined or featuredLessons is defined or featuredPosts is defined)
         and featuredProjects is iterable 
         and featuredProjects|length > 0 
             ? true : false
@@ -28,7 +29,7 @@
                                 content: null
                             } %}
                             {% include "_elements/projects-carousel.html.twig" with {
-                                projects: featuredProjects,
+                                projects: featuredProjects ?? featuredLessons ?? featuredPosts,
                                 cols: 3
                             } %}
                         </div>
@@ -40,6 +41,7 @@
                             content: null
                         } %}
                     {% endif %}
+                    <h1>Test</h1>
 
                     {# All #}
                     {% if collection_filters is defined and collection_filters is not null %}
