add archive button to lesson index

--- a/assets/sass/public/_variables.scss
+++ b/assets/sass/public/_variables.scss
@@ -209,7 +209,7 @@ $accordion-content-padding:				1.5rem;
 
 //-------------------- Button --------------------//
 
-$button-theme-color: $theme-color;
+$button-color: $theme-color;
 $button-light: darken($white, 6.67);
 $button-light-hover-color: darken($theme-color, 6.67);
 $button-dark: darken($text-color, 6.67);
