--- a/templates/_sections/feature-boxes.html.twig
+++ b/templates/_sections/feature-boxes.html.twig
@@ -5,7 +5,7 @@
             title: box.title,
             content: box.content,
             link: box.link ?? null,
-            targetBlank: box.targetBlank ?? false,
+            target: box.target ?? null,
             hoverAnimation: box.hoverAnimation ?? false,
             colWidthLg: 12/(boxes|length),
             colWidthSm: boxes|length < 2 ? '12' : '6',
