--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -70,7 +70,7 @@
                                             label: "View my CV",
                                             icon: "icon-line-file",
                                             margin: "me-3",
-                                            targetBlank: true
+                                            target: '_blank'
                                         } %}
                                     {% endif %}
                                     {% include "_elements/button.html.twig" with {
