--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -50,7 +50,7 @@
                         title: 'LinkedIn',
                         content: 'Click to write me on LinkedIn',
                         link: config('SOCIAL_LINKEDIN'),
-                        targetBlank: true
+                        target: '_blank'
                     },{
                         icon: 'icon-line-home',
                         title: 'Address',
