--- a/templates/_elements/feature-box.html.twig
+++ b/templates/_elements/feature-box.html.twig
@@ -6,13 +6,13 @@
 
 {# Optionnal variables: 
     - link: <string> The link url (href attribute)
-    - targetBlank: <bool> Open the link in a new page?
+    - target: <string> Open the link in a new page = '_blank'. Default = ''
     - hoverAnimation: <bool> Play hover animation even if the box has no link?
 #}
 
 {% set hasLink = link is defined and link is not null ? true : false %}
 {% set hoverAnimation = hasLink or hoverAnimation is defined and hoverAnimation is same as(true) ? ' fbox-effect' : '' %}
-{% set target = targetBlank is defined and targetBlank is same as(true) ? ' target="_blank"' : '' %}
+{% set target = target is defined and target is same as('_blank') ? ' target="_blank"' : '' %}
 {% set colWidthLg = colWidthLg is defined ? colWidthLg : '3' %}
 {% set colWidthSm = colWidthSm is defined ? colWidthSm : '3' %}
 
